--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
 
         #footer {
           background-color: #b0d1fb;
-          padding-top: 70px;
+          padding-top: 50px;
           width: 100%;
+          height:50%;
         }
 
         .marginBottom {
